<resources>
    <!-- Title -->
    <string name="app_name">BondoMan</string>
    <string name="title_login">Login</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_scan">Scan</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_settings">Settings</string>

    <!-- Login -->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Log in</string>

    <!-- Filter Button Transactions -->
    <string name="filter_all">All</string>
    <string name="filter_income">Income</string>
    <string name="filter_expense">Expense</string>

    <!-- Settings -->
    <string name="settings_save">Save Transactions</string>
    <string name="settings_send">Send Transactions</string>
    <string name="settings_random">Randomize Transactions</string>
    <string name="settings_logout">Logout</string>

    <!-- Text -->    
    <string name="text_xlsx">.xlsx</string>
    <string name="text_xls">.xls</string>
    <string name="text_save">Save</string>
    <string name="text_save_dialog">Select file format to save transactions</string>

    <!-- Description -->
    <string name="desc_imagePreview">Your Image Preview</string>
    <string name="desc_retake">Retake Photo</string>
    <string name="desc_upload">upload photo</string>
    <string name="desc_icLocation">location icon</string>
    <string name="desc_takePhoto">take a photo</string>
    <string name="desc_flipCamera">flip camera</string>
    <string name="hint_title">Title</string>
    <string name="hint_nominal">Nominal</string>
    <string name="hint_date">Date</string>
    <string name="hint_selectCategory">Select a Category</string>
    <string name="hint_viewLocation">View Location</string>
    <string name="hint_updateLocation">Update Location</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_add">Add</string>

    <!-- Hint -->
</resources>