<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_transactions">

    <activity
        android:id="@+id/loginActivity"
        android:name="com.example.myapplication.LoginActivity"
        android:label="@string/title_login"
        tools:layout="@layout/activity_login" />

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="com.example.myapplication.ui.transaction.TransactionFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.example.myapplication.ui.dashboard.DashboardFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.example.myapplication.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.myapplication.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />

</navigation>