<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scan.ScanFragment">

    <ImageView
        android:contentDescription="@string/desc_imagePreview"
        android:id="@+id/imagePreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         />

    <androidx.camera.view.PreviewView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cameraPreview">

    </androidx.camera.view.PreviewView>

    <ImageButton
        android:id="@+id/capturebtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="100dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/desc_takePhoto"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_photo_camera_24"
        app:layout_constraintBottom_toBottomOf="@+id/cameraPreview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/gallerybtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="100dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/desc_flipCamera"
        android:src="@drawable/baseline_image_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/capturebtn"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:contentDescription="@string/desc_retake"
        android:id="@+id/retakebtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="100dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_repeat_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/uploadbtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="100dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_check_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/desc_upload" />

</androidx.constraintlayout.widget.ConstraintLayout>