<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="56dp"
    android:background="@drawable/bottom_dialog_background"
    tools:context=".ui.saveTransactions.SaveTransactionsDialog">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="10dp"
        android:layout_marginVertical="22dp"
        android:contentDescription="@string/settings_save"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_horizontal_rule_24"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_save_dialog"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/save_radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <RadioGroup
        android:id="@+id/save_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="9dp"
        android:gravity="center"
        android:theme="@style/App.Custom.RadioButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/save_xlsx"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/text_xlsx"
            android:textColor="@color/slate_50"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/save_xls"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/text_xls"
            android:textColor="@color/slate_50"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:shadowRadius="@android:integer/config_longAnimTime"
        android:text="@string/text_save"
        android:textSize="16sp"
        android:textStyle="bold"
        android:theme="@style/App.Custom.RadioButton"
        app:layout_constraintTop_toBottomOf="@id/save_radio_group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>