<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.transaction.TransactionFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0" />

    <Button
        android:id="@+id/allFilter"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textlineactive"
        android:text="@string/filter_all"
        app:layout_constraintEnd_toStartOf="@+id/expensesFilter"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/expensesFilter"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textlines"
        android:text="@string/filter_expense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/incomeFilter"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textlines"
        android:text="@string/filter_income"
        app:layout_constraintStart_toEndOf="@+id/expensesFilter"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/transactionView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/slate_950"
        android:paddingTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/expensesFilter"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="11dp" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="144dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:backgroundTint="@color/purple_200"
        app:icon="@drawable/baseline_add_24"
        app:iconPadding="0dp"
        app:iconSize="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded" />

</androidx.constraintlayout.widget.ConstraintLayout>